# fulcrum

./: .coveragerc  .flake8  .gitignore  ARCHITECTURE.md  DEVELOPMENT-README.md  INSTALLER_LICENSE  LICENSE  README.md  TESTING.md  _capture_board.py  build_docs.py  build_flatpak.sh  build_utils.py  builddmg.py  buildexe.py  buildinstaller.py  clean_flatpak.sh  dmg_icon.py  generate_icons.py  main.py  pyproject.toml  requirements-dev.txt  stamp_version.py
docs/: download.html  index.html  styles.css  tool.html  why.html
examples/: org-1-startup.json  org-2-scaleup.json  org-3-enterprise.json  org-4-very-large.json  org-5-conglomerate.json
examples/well-designed/: conglomerate.json  enterprise.json  scaleup.json  startup.json  very-large.json
fulcrum/: __init__.py  version.py
fulcrum/application/: __init__.py  books.py  cluster_pool.py  dto.py  game_session.py  glossary.py  intake.py  interfaces.py  level_generator.py  map_model.py  move_text.py  name_pool.py  org_draft.py  org_draft_convert.py  org_draft_io.py  org_draft_nodes.py  plan.py  plan_edit.py  planner.py  scope_analysis.py  simulator.py
fulcrum/domain/: __init__.py  books.py  errors.py  hierarchy.py  models.py  moves.py  org_size.py  signals.py  simulation.py
fulcrum/infrastructure/: __init__.py  json_org_importer.py  json_save_repository.py  json_serialization.py  org_autosave.py  plan_exporter.py  plan_html.py  plan_repository.py  svg_map.py  system_clock.py
fulcrum/shared/: __init__.py  resources.py  text.py
fulcrum/ui/: __init__.py  analysis_thread.py  generation_thread.py  (+5 more)
installer/: app.py
(+68 files in other folders)
