[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fulcrum-decision-sandbox"
dynamic = ["version"]
description = "A decision-architecture sandbox and strategy game"
authors = [{name = "Oliver Ernster", email = "oernster@codecrafter.uk"}]
license = {text = "LGPL-3.0-only"}
requires-python = ">=3.11"
dependencies = ["PySide6>=6.7.0"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=fulcrum --cov=main --cov-report=term-missing --cov-fail-under=100 --cov-config=.coveragerc"
pythonpath = ["."]
